--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "~1.2.0",
     "angular-route": "~1.2.0",
     "foundation": "zurb/bower-foundation",
-    "d3":"~3.3.11"
+    "d3":"~3.3.11",
+    "oauthio":"latest"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
